--- a/3 - fr units & repeat/css/style.css
+++ b/3 - fr units & repeat/css/style.css
@@ -14,9 +14,9 @@ body {
     margin: 50px auto;
 }
 .item {
-    border: 1px solid black;
+    border: 1px solid rgb(111, 111, 111);
     
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: arial, sans-serif;
     font-weight: bold;
     font-style: italic;
