--- a/4 - Overlapping Items/css/style.css
+++ b/4 - Overlapping Items/css/style.css
@@ -12,33 +12,31 @@ body {
 
     /* background-color: white; */
     width: max-content;
-    margin: 5vh auto;
+    margin: 15vh auto;
     border: 2px solid #cccccc;
 }
 .item{
-    border-radius: 50%;
-    z-index: 10;
+    /* border-radius: 50%; */
+    /* z-index: 10; */
 }
 .item1 {
     grid-column: 2 / span 4;
     grid-row: 2 / span 4;
-    background-color: rgba(156, 215, 235, 0.596);
-    z-index: 11;
+    background-color: rgba(156, 215, 235, 0.6);
+    /* z-index: 11; */
 }
 .item2 {
     grid-column: 3 / span 4;
     grid-row: 3 / span 4;
-    background-color: rgba(255, 255, 255, 0.514);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 .item3 {
-    grid-column: 4 / span 4;
-    grid-row: 4 / span 4;
-    background-color: rgba(214, 173, 230, 0.596);
+    grid-area: 4 / 4 / 8 / 8;
+    background-color: rgba(214, 173, 230, 0.6);
 }
 .item4 {
-    grid-column: 5 / span 4;
-    grid-row: 5 / span 4;
-    background-color: rgba(255, 255, 255, 0.609);
+    grid-area: 5 / 5 / span 4 / span 4;
+    background-color: rgba(255, 255, 255, 0.4);
 }
 .entire-grid {
     grid-column: 1 / -1;
