--- a/6 - Implicit Grid/css/minmax.css
+++ b/6 - Implicit Grid/css/minmax.css
@@ -8,19 +8,20 @@ body {
     display: grid;
 
     /* 1 */
-    /* grid-template-columns: repeat(4, 100px);
+    grid-template-columns: repeat(3, 100px);
     width: max-content;
-     */
+    
     /* 2 */
     /* grid-template-columns: repeat(auto-fit, 100px); */
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
     /* grid-template-columns: 60px repeat(auto-fit, minmax(100px, 1fr)) 60px; */
     /*  */
+
     /* 3 */
     /* grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); */
     
-    grid-auto-rows: 100px;
-    /* grid-auto-flow: dense; */
+    /* grid-auto-rows: 100px; */
+    /* grid-auto-flow: column; */
     gap: 10px;
     
     padding: 60px;
