--- a/3-fr-units-and-repeat/css/fr-units.css
+++ b/3-fr-units-and-repeat/css/fr-units.css
@@ -24,3 +24,31 @@ body {
     font-size: 2rem;
     text-align: center;
 }
+
+.item1 {
+    grid-column: 1;
+}
+
+.item2 {
+    grid-column: 2;
+}
+
+.item3 {
+    grid-column: 3;
+}
+
+.item4 {
+    grid-column: 4;
+}
+
+.item5 {
+    grid-column: 5;
+}
+
+.item6 {
+    grid-column: 6;
+}
+
+.item7 {
+    grid-column: 7;
+}
