--- a/5-alignment/css/style.css
+++ b/5-alignment/css/style.css
@@ -7,7 +7,7 @@
     /* align-items: center; */
     /* justify-items: center; */
     
-    /* place-items: start; */
+    /* place-items: center; */
     
     /* justify-content: space-evenly; */
     /* align-content: center; */
@@ -17,14 +17,14 @@
     height: 50vh;
     width: 70vw;
     margin: 200px auto;
-    border: 1px solid gray;
+    border: 1px solid lightgray;
 }
 .item {
     font-family: sans-serif;
     font-weight: bold;
     font-size: 2em;
     padding-inline-start: .2em;
-    border: 1px solid gray;
+    border: 1px solid lightgray;
 }
 .item1{
     background-color: lightblue;
