--- a/5-alignment/css/style.css
+++ b/5-alignment/css/style.css
@@ -20,27 +20,34 @@
     border: 1px solid lightgray;
 }
 .item {
+    padding-inline-start: .2em;
+    border: 1px solid lightgray;
+
     font-family: sans-serif;
     font-weight: bold;
     font-size: 2em;
-    padding-inline-start: .2em;
-    border: 1px solid lightgray;
 }
 .item1{
+    grid-area: 1 / 1;
     background-color: lightblue;
 }
 .item2{
+    grid-area: 1 / 2;
     background-color: rgb(173, 230, 208);
 }
 .item3{
+    grid-area: 1 / 3;
     background-color: rgb(201, 230, 173);
 }
 .item4{
+    grid-area: 2 / 1;
     background-color: rgb(195, 173, 230);
 }
 .item5{
+    grid-area: 2 / 2;
     background-color: rgb(230, 173, 225);
 }
 .item6{
+    grid-area: 2 / 3;
     background-color: rgb(230, 173, 185);
 }
