--- a/1-welcome-grid/css/style.css
+++ b/1-welcome-grid/css/style.css
@@ -7,9 +7,14 @@ body{
     background-color: #dddddd;
 }
 
+h1 {
+    text-align: center;
+    font-family: monospace;
+}
+
 .grid-container {
     width: max-content;
-    margin: 100px auto;
+    margin: 50px auto;
     background-color: white;
 }
 
