--- a/5-alignment/css/style.css
+++ b/5-alignment/css/style.css
@@ -5,11 +5,11 @@
     gap: 10px;
 
     /* align-items: center; */
-    /* justify-items: center; */
+    /* justify-items: start; */
     
-    /* place-items: center; */
+    /* place-items: center start; */
     
-    /* justify-content: space-evenly; */
+    /* justify-content: center; */
     /* align-content: center; */
     
     /* place-content: center; */
@@ -19,7 +19,10 @@
     margin: 200px auto;
     border: 1px solid lightgray;
 }
+
 .item {
+    /* width: max-content; */
+    /* height: 1lh; */
     padding-inline-start: .2em;
     border: 1px solid lightgray;
 
@@ -27,26 +30,32 @@
     font-weight: bold;
     font-size: 2em;
 }
+
 .item1{
     grid-area: 1 / 1;
     background-color: lightblue;
 }
+
 .item2{
     grid-area: 1 / 2;
     background-color: rgb(173, 230, 208);
 }
+
 .item3{
     grid-area: 1 / 3;
     background-color: rgb(201, 230, 173);
 }
+
 .item4{
     grid-area: 2 / 1;
     background-color: rgb(195, 173, 230);
 }
+
 .item5{
     grid-area: 2 / 2;
     background-color: rgb(230, 173, 225);
 }
+
 .item6{
     grid-area: 2 / 3;
     background-color: rgb(230, 173, 185);
